tests/unary_ops/valid/nested_ops_2.amu
s32 main() {
    return -~0;
}