tests/unary_ops/invalid/missing_semicolon.amu
s32 main() {
    return !5
}